# vibetrading-opencode-instruct

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/: oh-my-openagent.json  opencode.json
.opencode/skills/analysis-report/: SKILL.md
.opencode/skills/backtest-framework/: SKILL.md
.opencode/skills/beauty-contest-screening/: SKILL.md
.opencode/skills/periodic-execution/: SKILL.md
.opencode/skills/stock-analysis-workflow/: SKILL.md
.opencode/skills/stock-quant-analysis/: SKILL.md
analysis/: AGENTS.md  _template.md
cron_jobs/: AGENTS.md  manage.py  notifier.py  trigger.sh  watchlist.json
docs/: README.md
docs/tables/: _index.md
examples/: README.md  backtest_summary.json  cron_registry_example.json  dingtalk_escape_top.md  dingtalk_nasdaq_signal.md
policy/: AGENTS.md
projects/beauty-contest-screening/: README.md  deploy.sh  requirements.txt
projects/beauty-contest-screening/agents-patches/: AGENTS.md.append.md  scripts-AGENTS.md.append.md
projects/beauty-contest-screening/html-report/: render_screening_html.py
scripts/: AGENTS.md
scripts/memory/: __init__.py  attribution.py  decay.py  evolution.py  expel.py  feedback_reset.py  git_committer.py  hooks.py  injection.py  reflexion.py  sanity.py  schema.py  scope_controller.py  scoring.py  stability.py  swarm_bridge.py  truncation.py  utils.py
scripts/memory/config/: swarm_memory.json
scripts/memory/parsers/: __init__.py  common.py  opencode.py  swarm.py
scripts/screening/: composite.py  layer1_fundamental.py  layer3_flow.py
sync/: README.md
(+9 files in other folders)
