[project]
name = "vibetrading-opencode-instruct"
version = "0.1.0"
description = "OpenCode financial analysis workspace template — AGENTS.md hierarchy + Skills + MCP configs + cron framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
